<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragments.ProfileFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/colorPrimary"
        android:layout_height="200dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/userImg"
            android:layout_width="145dp"
            android:layout_height="145dp"
            android:layout_centerInParent="true"
            android:src="@drawable/profile" />
    </RelativeLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginHorizontal="13dp"
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/colorPrimary"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:id="@+id/name"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            android:hint="@string/name"
            android:text="@string/vikas_gupta"
            android:clickable="false"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginHorizontal="13dp"
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/colorPrimary"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            android:hint="@string/number"
            android:text="@string/_6394031829"
            android:clickable="false"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginHorizontal="13dp"
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/colorPrimary"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            android:hint="@string/email"
            android:text="@string/abc_gmail_com"
            android:clickable="false"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginHorizontal="13dp"
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/colorPrimary"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            android:hint="@string/city"
            android:text="@string/gorakhpur"
            android:clickable="false"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginHorizontal="13dp"
        android:layout_width="match_parent"
        android:layout_marginTop="15dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/colorPrimary"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/black"
            android:hint="@string/birthday"
            android:text="@string/_16_07_2004"
            android:clickable="false"/>
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="12dp"
        android:weightSum="2">

        <com.google.android.material.button.MaterialButton
            android:layout_width="0dp"
            android:id="@+id/edtProfile"
            android:layout_height="50dp"
            android:layout_marginVertical="10dp"
            android:layout_weight="1"
            android:layout_marginHorizontal="7dp"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:text="@string/edit_profile"
            app:cornerRadius="12dp"
            android:textSize="18sp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/logOut"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="7dp"
            android:layout_weight="1"
            app:cornerRadius="12dp"
            style="@style/Widget.Material3.Button.OutlinedButton"
            android:text="@string/logout"
            android:textSize="18sp"/>
    </LinearLayout>

</LinearLayout>