<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DFD3D3"
    tools:context=".auth.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:scaleType="fitXY"
        android:src="@drawable/love"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-30dp"
        android:id="@+id/numberLayout"
        android:visibility="visible"
        android:elevation="25dp"
        app:cardCornerRadius="12dp"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintTop_toBottomOf="@id/imageView">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enter_your_number"
                android:textSize="16sp"
                android:textColor="@color/black" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
                android:layout_marginTop="8dp"
                app:boxStrokeColor="@color/black"
                app:boxBackgroundColor="@color/black"
                app:startIconDrawable="@drawable/baseline_phone_24"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/mobile_number"
                    android:inputType="number"
                    android:layout_marginBottom="5dp"
                    android:backgroundTint="#DFD9D9"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/sendOtp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:text="@string/send_otp"
                android:textSize="18sp"
                app:cornerRadius="12dp"
                android:layout_marginTop="15dp"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/signIn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="5dp"
                android:backgroundTint="#890620"
                android:text="@string/sign_in"
                android:textColor="@color/white"
                android:textSize="24sp"
                android:textStyle="bold"
                app:cornerRadius="10dp"
                app:iconSize="23dp"
                app:iconGravity="start"
                app:icon="@drawable/search"
                app:iconPadding="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/otpLayout"
        android:visibility="gone"
        android:layout_marginTop="-30dp"
        android:elevation="25dp"
        app:cardCornerRadius="12dp"
        android:layout_marginHorizontal="32dp"
        app:layout_constraintTop_toBottomOf="@id/imageView">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Enter OTP"
                android:layout_marginStart="10dp"
                android:textSize="16dp"
                android:textColor="@color/black" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
                android:layout_marginTop="8dp"
                app:boxStrokeColor="@color/colorPrimary"
                app:boxBackgroundColor="@color/black"
                app:startIconDrawable="@drawable/baseline_message_24"
                android:layout_height="match_parent">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userOtp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="     OTP"
                    android:inputType="number"
                    android:layout_marginBottom="5dp"
                    android:backgroundTint="#DFD9D9"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/verifyOtp"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                app:cornerRadius="13dp"

                android:text="Verify OTP"
                android:layout_marginTop="15dp"
                />
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>